[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_file = "route_planner/route_planner/__init__.py"

[project]
name = "route-planner"
description="Route Planner"
dynamic = ["version"]
authors = [
    {name = "Michal Mládek", email = "michal.mladek.78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["maps", "internet", "traffic", "route"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "python-dotenv",
    "django",
    "django-extensions"
]

[project.optional-dependencies]
dev = ["ipython"]
prod = ["gunicorn[gevent]"]

[project.urls]
homepage = "https://route-planner.softorks.eu"
repository = "https://github.com/michalnik/route-planner"
