[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_file = "route_planner/route_planner/__init__.py"

[project]
name = "route-planner"
description="Route Planner"
dynamic = ["version"]
authors = [{name = "Michal Mládek"}, {email = "osvc.04923031@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["maps", "internet", "traffic", "route"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-dotenv",
    "django",
    "django-ninja",
    "django-extensions",
    "djangorestframework",
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]",
    "folium",
    "openrouteservice",
    "markdown"
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "ipython",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
]
prod = ["gunicorn[gevent]"]

[project.urls]
homepage = "https://route.softorks.eu"
repository = "https://github.com/michalnik/route-planner"
